# ascend

./: .coverage  .gitignore  APOLLO_FREEZE_v1.md  ARCHITECTURE_AUDIT.md  ASCEND_ARCHITECT_CONTEXT_v1.md  ASCEND_QUALITY_STANDARD.md  CHANGELOG.md  COGNITIVE_FREEZE_v1.md  CONTEXT.md  CONTRIBUTING.md  GOVERNANCE.md  MILESTONES.md  MILESTONE_F_FOUNDATION.md  README.md  ROADMAP_2035.md  SUMMARY_FOR_CHATGPT.md  launch_manifesto.md  manifest.md  opencode.json  pyproject.toml  tmp_summary.py
.ascend/: AI_BOOT_SEQUENCE.md  AI_DEVELOPMENT_PROTOCOL.md  CODE_REVIEW_PROTOCOL.md  COMMIT_PROTOCOL.md  DEVELOPMENT_PROTOCOL.md  HUMAN_DEVELOPMENT_PROTOCOL.md  RELEASE_PROTOCOL.md  START_HERE.md  WORKFLOW_ENFORCEMENT.md
architecture/: ARCH-0001_System_Architecture_Overview.md  ARCH-0002_Domain_Model.md  ARCH-0003_Core_Engine_Specification.md  ARCH-0004_Agent_Architecture.md  ARCH-0005_Data_Model.md  ARCH-0006_MVP_Technical_Specification.md  ARCH-0007_Persistence_Architecture.md  ARCH-0008_Competency_Lifecycle.md  ARCH-0008_Persistence_Architecture.md  ARCH-0009_Runtime_State_Machine.md  ARCH-0010_Policy_Engine.md  ARCH-0011_Experience_Layer.md  ARCH-0012_Developer_Governance_System.md  ARCH-0013_Product_Behavior_Architecture.md  ARCH-0014_Ascension_Ring_Specification.md  ARCH-0015_API_ARCHITECTURE.md  ARCH-0016_FRONTEND_SDK.md  ARCH-0017_AUTHENTICATION_MODEL.md  ARCH-0018_FRONTEND_STATE.md  ARCH-0019_FRONTEND_DATA_FLOW.md  ARCH-0020_UI_CONTRACTS.md  ARCH-0021_ERROR_HANDLING.md  ARCH-0022_FRONTEND_STRUCTURE.md  ARCH-0023_Layout_Architecture.md  ARCH-0024_Frontend_SDK_Architecture.md  (+25 more)
(+293 files in other folders)
