[project]
name = "ascend"
version = "0.1.0"
description = "ASCEND Competency Development Framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
api = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
ascend = "ascend.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
